[Fix] swiper-scrollbar-drag invisibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -390,7 +390,7 @@
     /* height: 100%; */
     /* width: 100%; */
     /* position: relative; */
-    background: inherit !important;
+    @apply !bg-font-color-pri;
     border-radius: inherit !important;
     /* left: 0; */
     /* top: 0 */
